--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,8 +1,10 @@
-name: Build
+name: Analysis
 on:
- push:
-   branches:
-     - config/ci-cd
+ pull_request:
+  branches:
+     - main
+     - develop
+
 jobs:
   sonarcloud:
     name: SonarCloud
@@ -14,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Test and coverage
-        run: yarn test:all
+        run: yarn test:coverage
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
