chore: configura pipeline

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm t -- --watch",
     "test:staged": "npm t -- --findRelatedTests",
-    "test:coverage": "npm t -- --coverage",
+    "test:coverage": "CI=true npm t -- --coverage",
     "test:integration": "npm t -- --config ./jest.integration.config.js"
   },
   "repository": {
