--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "typeorm": "ts-node-dev node_modules/.bin/typeorm",
     "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
+    "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/default -d src/db/config.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/db/config.ts",
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest --passWithNoTests --no-cache --runInBand",
