chore: ajusta config do db

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2022-1-sgpti-gateway",
+  "name": "2022-1-Alectrion-EquipamentApi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
