--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "2022-1-Alectrion-EquipamentApi",
+  "name": "2022-1-sgpti-gateway",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "typeorm": "ts-node-dev node_modules/.bin/typeorm",
-    "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
     "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/default -d src/db/config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/db/config.ts",
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest --passWithNoTests --no-cache --runInBand",
@@ -32,6 +32,7 @@
     "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-prettier-standard": "^4.0.1",
