--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/fga-eps-mds/2022-1-SGPTI-EquipamentApi#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
@@ -44,6 +45,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.3",
     "jest-mock-extended": "^2.0.7",
+    "jest-sonar": "^0.2.12",
     "prettier": "^2.7.1",
     "prettier-config-standard": "^5.0.0",
     "ts-jest": "^28.0.7",
@@ -52,6 +54,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pg": "^8.7.3",
