refactor: updateequipment status when create order service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ./data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
+    expose:
+      - 5432
 
   equip_api:
     build: .
