fix: atualiza nome arquivo de metrica

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         mkdir analytics-raw-data
         url="https://sonarcloud.io/api/measures/component?component=${{secrets.PROJECT_KEY}}&metricKeys=files,functions,complexity,comment_lines_density,duplicated_lines_density,coverage,ncloc,tests,test_errors,test_failures,test_execution_time,security_rating&pullRequest=${{github.event.pull_request.number}}"
-        curl $(echo $url | tr -d \') > analytics-raw-data/fga-eps-mds-2022-1-Alectrion-EquipamentApi-$(date +'%m-%d-%Y-%H-%M-%S')-${{github.event.pull_request.number}}.json
+        curl $(echo $url | tr -d \') > analytics-raw-data/fga-eps-mds-2022-1-Alectrion-EquipamentApi-$(date +'%m-%d-%Y-%H-%M-%S')-pr${{github.event.pull_request.number}}.json
     - name: push metrics
       run: |
         git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
