--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm t -- --watch",
     "test:staged": "npm t -- --findRelatedTests",
-    "test:coverage": "CI=true npm run test -- --coverage",
+    "test:all": "CI=true npm run test -- --coverage",
     "test:integration": "npm t -- --config ./jest.integration.config.js"
   },
   "repository": {
