--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   },
   "homepage": "https://github.com/fga-eps-mds/2022-1-SGPTI-EquipamentApi#readme",
   "devDependencies": {
-    "@types/faker": "5.5.9",
-    "faker": "5.5.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/faker": "5.5.9",
     "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
@@ -45,6 +45,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "faker": "5.5.3",
     "jest": "^27.3.1",
     "jest-mock-extended": "^2.0.7",
     "jest-sonar": "^0.2.12",
@@ -59,6 +60,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.7"
