--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,9 +1,8 @@
 name: analysis
 on:
- pull_request:
+ push:
    branches:
-     - main
-     - develop
+     - testes
 jobs:
   sonarcloud:
     name: SonarCloud
