--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,9 @@
 sonar.organization=fga-eps-mds-1
 sonar.projectKey=fga-eps-mds-2022-1-Alectrion-EquipamentApi
 sonar.sources=src
+sonar.tests=test
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=report/sonar-report.xml
 sonar.sourceEncoding=UTF-8
-sonar.coverage.exclusions=dist/, node_modules, public, tsconfig.json, src/**/*.spec.ts, src/db/**/*.ts, src/*.ts
-sonar.cpd.exclusions=src/**/*.test.ts
+sonar.coverage.exclusions=test, dist/, node_modules, public, tsconfig.json, src/**/*.spec.ts, src/db/**/*.ts, src/*.ts
+sonar.cpd.exclusions=src/**/*.test.ts,test
