adicionado seeds de unidade

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,5 @@ services:
       - ./:/app
     ports:
       - 4002:4002
-    command: bash -c "yarn && yarn dev"
+    command: bash -c "yarn && yarn migration:run && yarn dev"
 
